minor revisions to draft caught during work on presentation for Midwest Theory

--- a/draft.tex
+++ b/draft.tex
@@ -58,13 +58,13 @@ In negotiations with its neighbors, Israel is hesitant to give certain concessio
 
 This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though it could hypothetically relieve tensions and reduce violence. If Chechen autonomy could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. From the Russian perspective, granting the concession of increased autonomy might have large future costs.
 
-This paper uses a two-sided Spence signaling (1973) model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to peace.
+This paper uses a two-sided signaling model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to peace.
 
 While an integral part of the literature on conflict, concessions have been only partially addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1995), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. When the assets that are the object of the bargaining confer future power, a lack of credible commitment, or trust, can create a holdup problem that prevents the optimal level of cooperation.
 
 In these models war can be averted by splitting the pie (i.e. the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party, and asymmetric information is about each party's \textit{resolve} to fight and/or military capabilities (Arena 2013). In this context, an example of costly signaling would be military preparations for war (Slantchev 2011).
 
-We will approach the commitment problem through this same general understanding, but we model a party's ability to cooperate as private information. A high type is able to cooperate; a low type has incentives not to cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to make the necessary concessions for peace. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmous Abbas may be a low type, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. %MORE commitment literature needs to be cited here. 
+We will approach the commitment problem through this same general understanding, but we model a party's ability to cooperate as private information. A high type is able to cooperate; a low type has incentives not to cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to follow through on a peace agreement. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmous Abbas may be a low type, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. %MORE commitment literature needs to be cited here. 
 
 %Concessions form the centerpiece of the GRIT (graduated and reciprocated initiatives in tension reduction) theory in the psychological literature (Osgood 1962) and have shown ample success in lab settings. Komorita (1973) conducts lab experiments using a repeated Prisoner's Dilemma similar to the setup in our paper and finds costly conciliatory acts (concessions) to be useful in promoting cooperation. De Dreu (1995) likewise uses a lab setting to experiment with concessions and conflict.  %de dreu bases experiments on shelling 60 and bacharach and lawler 81/ lawler 92 about deterrance, the shelling conflict spiral was not fully rejected, but the alternative of deterrance was supported
 %In addition to concessions, De Dreu also reports laboratory results on mediation; he concludes that a weaker mediator should work with promises while a more powerful one can be effective with threats.  Larson (1988) and others have applied this framework to political science questions. On the theoretical side, Filson and Werner (2007) use a bargaining setup to explore the sensitivities of costs compared to the sensitivity of giving concessions. 
@@ -145,7 +145,8 @@ The threshold $\delta^*$ needed is \be
  \ee
 Assume $\delta_h> \delta^*$ and $\delta_l < \delta^*$.   
 
-\section{Analysis of benchmark cases }
+\section{Analysis of benchmark cases}
+\label{sec:bench}
 When countries are faced with doubts about each other's motives, they have several options of how to proceed. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor for the high type ($\delta_h$) exceeds the cutoff found in expression (1), there are many types of equilibria; consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed, so are not attractive.} A thorough analysis of the different types of equilibria, as well as all proofs for this section, can be found in the appendix. 
 \\
 \\
@@ -204,20 +205,21 @@ This smallest concession is denoted $g_h^*$ and is calculated in equation (11) i
 
 In general, a high probability of a high type will make this no-concessions separating equilibrium very attractive. Under low $p$, high types are better off choosing the pooling equilibrium.
 
-Concessions separating equilibria are a way for countries to solve their disputes. By giving costly concessions, they signal their intentions in a way that a partner unwilling to make peace would not be willing to signal.  A mediator can sometimes make this a possibility, as will be shown in section 7, but this equilibrium is also achievable bilaterally in some cases. 
+Concessions separating equilibria are a way for countries to solve their disputes. By giving costly concessions, they signal their intentions in a way that a partner unwilling to make peace would not be willing to signal.  A mediator can sometimes make this a possibility, as will be shown in Section~\ref{sec:med}, but this equilibrium is also achievable bilaterally in some cases. 
 
-One example of such an equilibrium includes Israel and Egypt at the Camp David Accords. Both parties gave concessions (Israel a material land concession and Egypt diplomatic recognition of Israel) that signaled their willingness to end the stalemate that had characterized the previous five years. Of course this result depended on Carter's use of mediation techniques, including use of manipulative mediation -- a concept we will explore in section 7 below. 
+One example of such an equilibrium includes Israel and Egypt at the Camp David Accords. Both parties gave concessions (Israel a material land concession and Egypt diplomatic recognition of Israel) that signaled their willingness to end the stalemate that had characterized the previous five years. Of course this result depended on Carter's use of mediation techniques, including use of manipulative mediation -- a concept we will explore in Section~\ref{sec:med} below. 
 
 %another example
 
 \section{Inefficiency and concessions} % Lake says combine this from the start and allow inefficiency
+\label{sec:IC}
 We now relax the assumption about the benefit of a concession being equal to its cost and instead allow countries to ``burn'' a portion of the concession they give. For example, an expensive display of pageantry to a dignitary might benefit the receiving country very little, if at all, but it still signals good intentions on behalf of the giving country. The option to give efficient concessions is still available along with new options to give a variety of less efficient concessions. 
 
 In the model, countries choose a scalar $e$ to multiply by their given concession $g$. $0 \leq e \leq 1$. As before, $C(g)= g$ but while the receiving country observes the full concession $g$, its benefit is now only $eg$.\footnote{In a more general model not relevant to results presented here, we could also think of $e$ as a function $E(\cdot)$. The argument is still $g$, but instead of a scalar, $E(\cdot)$ can transform $g$ into any concession, not only a numerical value. These gifts will be converted into utilities by cost and benefit functions, which then allow the possibility of a gift having efficiency greater than 1. The transformation function $E(\cdot)$ can be thought of as the type of gift, and has a cost to the sender and a direct benefit to the receiver in addition to its signaling value.} From here on in the analysis, we use $g_l=0$ and $g_h=g_h^*$ to denote the equilibrium concenssions as presented in the previous section and calculated in the appendix. \\
 \\
 {\bf Theorem 3:} It is optimal to give efficient gifts (where $e=1$) in a separating equilibrium. \\
 \emph{Proof:}
-The benefit of a gift appears on both sides of the IC for both types and thus cancels out in the low type IC $(pg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+pg_h )$ and in the high type IC:  $(pX_{TT}^h+(1-p)X_{FF}^h - g_h +pg_h \geq X_{FF}^h +pg_h)$.\footnote{Elaboration and explanation of the IC constraints is in the proof of Theorem 2.} Therefore, receiving a gift where $e<1$  does not affect incentives to truth tell about the countries' types. However, the expected separation utilities under this game are now
+The benefit of a gift appears on both sides of the IC for both types and thus cancels out in the low type IC $(peg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+peg_h )$ and in the high type IC:  $(pX_{TT}^h+(1-p)X_{FF}^h - g_h +peg_h \geq X_{FF}^h +peg_h)$.\footnote{Elaboration and explanation of the IC constraints is in the proof of Theorem 2.} Therefore, receiving a gift where $e<1$  does not affect incentives to truth tell about the countries' types. However, the expected separation utilities under this game are now
 \be
 U_h= pX_{TT}+(1-p)X_{FF} - g_h+peg_h 
 \ee
@@ -229,7 +231,7 @@ U_l=X_{FF}+peg_h
 
 We now model concessions to potentially have real material help or harm to the giver. The interpretation is that the country which receives the concessions can use them to build up their military or to build up their civil society. The former hurts the giver of the concessions in war; the latter helps the giver in peace. The Golan heights is such an example: if Syria is an ally of Israel, the Golan Heights is a reasonable concession to make, but if Syria later turns out to betray a trust, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
 
-Allow $T,W$ and $D$ to be functions $T(\cdot),W(\cdot)$ and $D(\cdot)$. Payoffs depend on arguments $s_i$, the size of country i's civil society and $m_i$, the size of country i's military. $s_i$ and $m_i$ are exogenous.
+Allow $T,W$ and $D$ to be functions that depend on arguments $s_i$, the size of country i's civil society and $m_i$, the size of country i's military. $s_i$ and $m_i$ are exogenous.
 
 In period 0, after receiving his concession, a country makes the decision to allocate it between military and civil society. $\alpha_i$ is the portion of his received concession that country i chooses to dedicate to civil society; $(1- \alpha_i$) is the portion country i dedicates to military buildup. This decision is a simple optimization problem for each country. Parameters are common knowledge so the result of this decision is well known should the country's type be known. Concessions are immediately converted into civil society or military gifts and incorporated into payoff functions. 
  $C_h(\cdot)=C_l(\cdot)=1$ as earlier in the model description. Periods 1 to $\infty$ are as before but with the following stage game payoffs:
@@ -238,10 +240,10 @@ In period 0, after receiving his concession, a country makes the decision to all
 \captionof{table}{Modified Stage Game Payoffs}
 \begin{tabular}{|l|c|c|}
   \hline      & Trust & Fight \\ \hline
-	 Trust& \small$T(s_2+\alpha_2g_1)$, & \small$-D(m_2+(1-\alpha_2)g_1),$ \\
-  & \small$T(s_1+\alpha_1g_2)$ & \small$T(s_1+\alpha_1g_2)  +W(m_2+(1-\alpha_2)g_1) $\\ \hline
-	Fight & \small$T(s_2+\alpha_2g_1)+W(m_1+(1-\alpha_1)g_2),$& \small$W(m_1+(1-\alpha_1)g_2)-D(m_2+(1-\alpha_2)g_1),$ \\
-	 & \small$-D(m_1+(1-\alpha_1)g_2) $ & \small$W(m_2+(1-\alpha_2)g_1)-D(m_1+(1-\alpha_1)g_2)$ \\ \hline
+	 Trust& \small$T(s_2+\alpha_2 e g_1)$, & \small$-D(m_2+(1-\alpha_2)e g_1),$ \\
+  & \small$T(s_1+\alpha_1 e g_2)$ & \small$T(s_1+\alpha_1 e g_2)  +W(m_2+(1-\alpha_2)e g_1) $\\ \hline
+	Fight & \small$T(s_2+\alpha_2 e g_1)+W(m_1+(1-\alpha_1) e g_2),$& \small$W(m_1+(1-\alpha_1)e g_2)-D(m_2+(1-\alpha_2)e g_1),$ \\
+	 & \small$-D(m_1+(1-\alpha_1) e g_2) $ & \small$W(m_2+(1-\alpha_2)e g_1)-D(m_1+(1-\alpha_1)e g_2)$ \\ \hline
 \end{tabular}
 \end{center}
 \vskip.1in
@@ -267,13 +269,14 @@ Whether it is beneficial for high types to settle on the efficient concession or
 This finding of inefficiency is for profoundly different reasons than the literature related to Camerer (1988) or Prendergast and Stole (2001).\footnote{Since our initial setup is essentially identical to Camerer's, the desired inefficiency of  pre-play communication can also be found in our model. With a slight behavioral modification, the reasoning of Prendergast and Stole (2001) can also be had: if a country suffers regret after efficiently giving to a type different than their own, there is a premium for guessing correctly. In Prendergast and Stole the two types are equal except in labeling; in our model, high types and low types are used so there is an incentive for low types to try to pose as high types. Aside from this difference, essentially the same result is found: if countries suffer a ``mismatching'' cost due to giving to the wrong type, they will be hesitant to do so and may offer inefficient concessions.} Instead of being in reaction to a behavioral regret for mismatching or serving as a way to discourage low types for entering the game altogether, here making concessions inefficient is a device to prevent low types from using those concessions against oneself in the future.
 
 \section{Mediation}
+\label{sec:med}
 All results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator which will be modeled as a mechanism. 
 
 Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz, 2002), much of the literature has focused on self-enforcing mechanisms. If however a credible third party does exist, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does both. 
 
 The model setup is as before, but instead of parties being free to give whatever concession they want, the mediator solicits type reports and then enforces incentive compatible concessions. This mediator wil be modeled as a mechanism $M$.
 
-$M$ inputs the reports of types $t_1$ and $t_2$ and outputs the required concessions $g_1$ and $g_2$ so that $ M:(t_1,t_2)\rightarrow( g_1(\cdot), g_2(\cdot))$.  The countries are bound to send the mandated concessions. The benchmark case requires the countries to send the same concession to both types, since types are private information.  $M$ can differentiate based on recipient's type. Otherwise, the setup is identical to the benchmark case.  
+$M$ inputs the reports of types $t_1$ and $t_2$ and outputs the required concessions $g_1$ and $g_2$ so that $ M:(t_1,t_2)\rightarrow( g_1(\cdot), g_2(\cdot))$.  The countries are bound to send the mandated concessions. The benchmark case analyzed in Sections~\ref{sec:bench} and \ref{sec:IC} requires the countries to send the same concession to both types, since types are private information.  $M$ can differentiate based on recipient's type. Otherwise, the setup is identical to the benchmark case.  
 
 Welfare is again considered as the sum of the high type utilities. Qualitatively, similar results would hold if we also included low types in the analysis with weighting based on $p$. In the analysis, incentive compatibility and individual rationality constraints must be satisfied. The revelation principle is used to attain truthful self-identification (Myerson 1979). For mediation to be useful, $C_l(\cdot)$ needs to be pointwise greater than $C_h(\cdot)$, and we will assume this. This means that a low type is not identical to a high type, and indeed bears greater costs for peaceful actions. This can be thought of as a leader who must explain peace to his people. If the people want to make peace with the rival, posturing for peace is not costly for the leader. But if the people do not want to make peace with the rival, the leader loses credibility by outwardly touting peace. Therefore taking a peaceful action is more costly, and perhaps even impossible. This low type leader can bluff in the bilateral setting but not, as we will see, when a mediator is present. 
 \\
@@ -290,7 +293,7 @@ U_h^M= pX_{TT}+(1-p)X_{FF}
 because high types exchange concessions of the same value. $U_h^M>U_h^*$. Note that no additional wealth is created by $M$, but less is transferred to low types, and welfare is defined as high-type utility.\footnote{Low types IR constraint still binds and $U_l=X_{FF}$}  $\blacksquare$ 
 
 
-Since the low type IC constraint binds, the only way which a mechanism can improve upon the benchmark case is by having asymmetric costs of giving for the types. As per Theorem 4, inefficiency is due to the high types giving an inefficient gift in order to separate while still being able to prevent low types from using concessions against the high types. If costs are disparate, under certain parameters the mediator can mandate concessions only between declared high types. This means there is no longer a need for inefficient concessions since concessions will never be used against the giver. Thus, a mediator is able to remove inefficiency in concession giving and bring willing parties to the table to give the gifts necessary to achieve peace. 
+Since the low type IC constraint binds, the only way in which a mechanism can improve upon the benchmark case is by having asymmetric costs of giving for the types. As per Theorem 4, inefficiency is due to the high types giving an inefficient gift in order to separate while still being able to prevent low types from using concessions against the high types. If costs are disparate, under certain parameters the mediator can mandate concessions only between declared high types. This means there is no longer a need for inefficient concessions since concessions will never be used against the giver. Thus, a mediator is able to remove inefficiency in concession giving and bring willing parties to the table to give the gifts necessary to achieve peace. 
 
 
 The improvements by the mediator here do not rely on the mediator's private information as in the models of Kydd (2003), Rauchhaus (2006) and Smith and Stam (2003). Therefore the mediator's preferences need not be a huge factor in her participation. So long as the costs are small enough to be worth her participation the mediator can effectively enter and assist in solving the conflict.
