add notes.tex to hold work on new result

--- a/draft.tex
+++ b/draft.tex
@@ -41,7 +41,7 @@ kbuzard@syr.edu\\
 Ben Horne\\ 
 University of California, San Diego\\
 \\}
-\date{September 30, 2016}
+\date{\today}
 %To Do : define what is ineffieicncy
 
 \begin{document}
