add initial notes for result about mediator making peace more attainable

--- a/notes.tex
+++ b/notes.tex
@@ -57,11 +57,30 @@ bookmarksopen=true]{hyperref}
 
 \vskip.3in
 \un{June 6, 2017}\\
-Want to develope result showing that mediator increases potential for peace
+Want to develop result showing that mediator increases potential for peace
 \begin{itemize}
-	\item I
+	\item i.e. want to show mediator makes (Trust, Trust) and equilibrium over a larger parameter space than without mediator
 \end{itemize}
 
+\vskip.2in
+What do we know?
+\begin{itemize}
+	\item Theorem 4: Under some parameters, optimal concessions aren't made when there isn't trust
+		\begin{itemize}
+			\item This is still a separating equilibrium, but completely inefficient concessions are given. So welfare is lower because of inefficient concessions. 
+			\item Where there is a possibility of mediation helping to achieve peace where it otherwise would not be attainable (not just improving welfare) is if this reduction in welfare due to the inefficient concessions means that for some parameters it's not worth separating so we don't get peace at all without the mediator.
+				\begin{itemize}
+					\item i.e. when welfare for high type from separating falls below that for pooling, separating is no longer an equilibrium (convo with Jean-Guillaume).
+				\end{itemize}
+		\end{itemize}
+	\item Theorem 5: Mediator eliminates inefficient concessions
+		\begin{itemize}
+			\item Here, we're already in that parameter space where there \emph{are} inefficient concessions
+		\end{itemize}
+\end{itemize}
+
+\vskip.5in
+Will need to start by assuming that $\de_h <$ threshold where separating with no concessions works.
 
 		
 \end{document}
