--- a/presentation.tex
+++ b/presentation.tex
@@ -48,7 +48,7 @@
 \begin{document}
 \title[Inefficient Concessions and Mediation\hspace{2.95in}\insertframenumber/\inserttotalframenumber]{Inefficient Concessions and Mediation}
 \author[Kristy Buzard and Ben Horne]{Kristy Buzard and Ben Horne\\ kbuzard@syr.edu}
-\date{December 3, 2016}
+\date{June 15, 2017}
 \maketitle
 %\insertpresentationendpage removed b/c of appendix
 
@@ -92,8 +92,8 @@ Start with simple, two-player repeated Prisoners' Dilemma
 Add time zero: let partners give concessions with both signaling and material value
 \pause
 \begin{itemize}[<+->]
-	\item Let partners destroy some/all of the material value
 	\item Let material value provide help/harm to the giver
+	\item Let partners destroy some/all of the material value
 \end{itemize}
 
 \pause
@@ -144,7 +144,7 @@ Mediation: Fey and Ramsay (2008, 2011), Horner et al. (2010)
 \pause
 \begin{enumerate}[<+->]
 	\item[-1.] Nature independently determines types of Country 1 and Country 2: $\de_i \in \left\{\de_h,\de_l\right\}$
-	\item[0.] Countries simultaneously give costly concessions: $g_1, g_2 \in \mathbb{R}_+$
+	\item[0.] Countries simultaneously give costly concessions: $g_i \in \mathbb{R}_+$
 	\item[1--$\infty$.] Countries engage in a simultaneous Prisoners' Dilemma interaction 
 \end{enumerate}
 
@@ -176,9 +176,9 @@ Assume $T>W-D$
 
 \begin{frame}
 \begin{itemize}[<+->]
-	\item Payoffs: sum the discounted stage game payoffs plus any concessions 
+	\item Payoffs: sum the discounted stage game payoffs plus any concessions given or received
 		\begin{itemize}
-			\item e.g. player's $i$'s payoff if both parties play ``Trust'' in every period: $\sum_{t=1}^\infty \de_i^{t-1} T = \frac{T}{1-\de_i}$
+			\item e.g. player's $i$'s payoff if both parties give no concession and play ``Fight'' in every period: $$\sum_{t=1}^\infty \de_i^{t-1} (W-D) = \frac{W-D}{1-\de_i}$$
 		\end{itemize}
 	\item Parameters are common knowledge with the exception of $\delta_i$, which is country i's private information
 	\item Social welfare measured as sum of high types' expected utilities
@@ -194,9 +194,9 @@ Assume $T>W-D$
 \pause
 Assume two types: $\de_h$ and $\de_l$
 \begin{itemize}[<+->]
-	\item $\de_h > \de^* > \de_l$ where $\de^*$ is the cutoff for sustaining (Trust,Trust) eqm
+	\item $\de_h > \de^* > \de_l$ where $\de^*=\frac{W}{T+D}$ is the cutoff for sustaining (Trust,Trust) eqm
 	\item $p$: probability of high type
-	\item Low type's cost to give concession $g$: $c_l(g)>c_h(g) =g$
+	\item Cost of giving concessions $g$: $g = c_l(g)\geq c_h(g) = g$
 \end{itemize}
 
 \pause
@@ -204,9 +204,9 @@ Assume two types: $\de_h$ and $\de_l$
 Some equilibria of interest
 \pause
 \begin{itemize}[<+->]
-	\item Pool on `Fight'
 	\item Separating without concessions
 	\item Separating through concessions
+	\item Pool on `Fight'
 \end{itemize}
 \end{frame}
 
@@ -218,22 +218,35 @@ Some equilibria of interest
 	
 \pause	
 \[
-  U_h=(p-1)g + \textstyle \frac{\de_h}{(1-\de_h)} \left[pT+(1-p)(W-D)\right]
+  U_h=pg - c_h(g) + \textstyle \frac{\de_h}{(1-\de_h)} \left[pT+(1-p)(W-D)\right]
 \]
 \pause
 \vskip-.1in
 
 	\begin{itemize}[<+->]
-		\item The smallest concession is $c_l^{-1}\left(p(T+D)\right)$
+		\item The smallest concession is $p(T+D)$
 		\item If $p$ is low, high types are better off in the `fight' pooling equilibrium
 	\end{itemize}
 \end{frame}
 
 \section{Inefficient Concessions}
 \subsection{Add Money Burning}
+\begin{frame}{Timeline}
+\pause
+\begin{enumerate}[<+->]
+	\item[-1.] Nature independently determines types of Country 1 and Country 2: $\de_i \in \left\{\de_h,\de_l\right\}$
+	\item[0.] Concessions
+		\begin{enumerate}
+			\item[0a.] Countries simultaneously give costly concessions and decide on the efficiency of the concessions: $(g_i, e_i) \in \mathbb{R}_+ \times [0,1]$ 
+			\item[0b.] \textcolor{red!75!green!50!blue!25!gray}{Countries decide what proportion of a received concession to invest in civil society (vs. military capabilities): $\alpha_i \in [0,1]$}
+		\end{enumerate}	
+	\item[1--$\infty$.] Countries engage in a simultaneous Prisoners' Dilemma interaction 
+\end{enumerate}
+\end{frame}
+
 \begin{frame}{Burning money is unattractive}
 \pause
-Allow giver of concession to also choose $0 \leq e \leq 1$, where benefit of concession is $eg$
+Now benefit of concession is $eg$
 
 \vskip.1in
 \pause
@@ -243,28 +256,55 @@ Allow giver of concession to also choose $0 \leq e \leq 1$, where benefit of con
 \pause
 \begin{itemize}[<+->]
 	\item The benefit of the gift appears on both sides of the incentive constraint for both individuals, so cancels out
+	\item Costs of giving a concession don't change
 	\item The benefit appears in the high type's expected utility
 \end{itemize}
+\end{frame}
+
+\begin{frame}{Timeline}
+\pause
+\begin{enumerate}[<+->]
+	\item[-1.] Nature independently determines types of Country 1 and Country 2: $\de_i \in \left\{\de_h,\de_l\right\}$
+	\item[0.] Concessions
+		\begin{enumerate}
+			\item[0a.] Countries simultaneously give costly concessions and decide on the efficiency of the concessions: $(g_i, e_i) \in \mathbb{R}_+ \times [0,1]$ 
+			\item[0b.] \textcolor{blue}{Countries decide what proportion of a received concession to invest in civil society (vs. military capabilities): $\alpha_i \in [0,1]$}
+		\end{enumerate}	
+	\item[1--$\infty$.] Countries engage in a simultaneous Prisoners' Dilemma interaction 
+\end{enumerate}
 \end{frame}
 
 \begin{frame}[label=hurt]
 \frametitle{Concessions can hurt the giver}
 \pause
-Now assume a low type will use concessions against you, i.e. to reduce your payoffs when partner fights \hyperlink{Supplemental}{\beamerbutton{Modified Payoffs}}
-\vskip.1in
-\pause
 \begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Theorem 4}
-  There are parameters under which the optimal equilibrium features inefficient concessions.
+  When the low type country can use concessions to reduce the payoffs of its negotiating partner during a `fight' stage (i.e. $\alpha_L < 1$), there are parameters under which the separating-through-concessions equilibrium features inefficient concessions.
 \end{beamerboxesrounded}
+\hyperlink{Supplemental}{\beamerbutton{Modified Payoffs}}
 \pause
 \[
-  U_h=peg-g + \textstyle \frac{\de_h}{(1-\de_h)} \left[pT(1+eg)+(1-p)(W-D(1+eg))\right]
+  U_h=peg - c_h(g) + \textstyle \frac{\de_h}{1-\de_h} \left[pT(1+eg)+(1-p)(W-D(1+eg))\right]
 \]
 \pause
 \vskip-.1in
 \begin{itemize}[<+->]
 	\item If $p$ is low, concessions likely to be used against you, so remove material value
-	\item Conjecture: Pooling on `Fight' optimal over larger set of parameters
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Peace not possible in some scenarios}
+\pause
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Theorem 5}
+  When $\alpha_L < 1$ is allowed, peace becomes unachievable for some parameters under which it is achievable when concessions do not have material value.
+\end{beamerboxesrounded}
+
+\pause
+\vskip.1in
+\begin{itemize}[<+->]
+	\item If peace is achievable, concessions may be either efficient or inefficient
+	\item High-type utility may increase or decrease from no-material-value case
 \end{itemize}
 \end{frame}
 
@@ -278,12 +318,12 @@ Now assume a low type will use concessions against you, i.e. to reduce your payo
 \begin{itemize}[<+->]
   \item Mechanism: if two high types, give concession and play `Trust'; Otherwise, no concession and `Fight'
 	\item Concession is necessary to get truthful revelation, but only to high type
-	\item Cost of concession must be greater than benefit for low type
+	\item Need cost of concession for low type to be not to large relative to cost for high type
 \end{itemize}
 \vskip.1in
 \pause
-\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Theorem 5}
-  A mediator can eliminate inefficient concessions.
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Theorem 6}
+  A mediator restores peace where $\alpha_i < 1$ destroys it, eliminates inefficient concessions, and reduces the threshold $\de_h$ for high types.
 \end{beamerboxesrounded}
 
 \end{frame}
